src/objects/ProductEntitlementMap__c.object
<CustomObject>
    <fields>
        <fullName>Entitlement_Process__c</fullName>
        <label>Entitlement Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>SKU Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Name__c</fullName>
        <label>SFDC Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object is used to store Product SKU's for Product Mapping for Automatic Entitlement Creation.</description>
    <label>Product Entitlement Map</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductEntitlementMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>